# prism-intelligence

./: .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  OPENCODE.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
brain/: README.md
brain/agents/: chatgpt.md  claude.md  deepseek.md  gemini.md  notebooklm.md  opencode.md  perplexity.md
brain/contexts/: README.md
brain/experiments/: README.md
brain/knowledge/architecture/: architecture-v1.md
brain/knowledge/decisions/: _template.md  adr-0001-twr-metric.md  adr-0002-strategy-context.md
brain/knowledge/domains/: backtesting.md  benchmark.md  ingestion.md  market.md  portfolio.md  risk.md  strategy.md
brain/knowledge/research/: README.md
brain/system/: governance.md  mcp-usage.md
docker/: Dockerfile  Dockerfile.api  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml
docs/agents/: backtest-agent.md  ingestion-agent.md.md  portfolio-agent.md  risk-agent.md
migrations/: env.py
scripts/: bootstrap.sh  migrate.sh
src/prism/: main.py
src/prism/application/: __init__.py
src/prism/domain/: __init__.py
src/prism/domain/analytics/: __init__.py
src/prism/domain/market/: __init__.py
src/prism/domain/portfolio/: __init__.py
src/prism/domain/risk/: __init__.py
src/prism/domain/shared/: __init__.py
src/prism/infrastructure/: __init__.py
src/prism/infrastructure/config/: __init__.py
src/prism/infrastructure/db/: models
src/prism/interfaces/: __init__.py
src/prism/interfaces/api/: app.py  dependencies.py  health.py  main.py  router.py
tools/brain/: README.md  config.py  exceptions.py  models.py  pyproject.toml  registry.py
tools/brain/git/: __init__.py  service.py
tools/brain/mcp/: __init__.py  handlers.py  server.py  tools.py  transport.py
tools/brain/services/: __init__.py  context.py  manifest.py  patch.py  reader.py  search.py
tools/brain/tests/: test_git.py  test_mcp.py  test_reader.py
