[project]
name = "prism-intelligence"
version = "0.1.0"
description = "Prism Intelligence - Real Estate Portfolio Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pydantic-extra-types>=2.6.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "numpy-financial>=1.0.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.0",
    "yfinance>=0.2.40",
    "email-validator>=2.1.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-exporter-otlp>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipython>=8.24.0",
    "ipdb>=0.13.13",
]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "faker>=24.0.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "DTZ", "T10", "T20", "Q", "FURB", "SIM", "PIE", "TID", "TRY", "PD", "NPY", "RSE", "RET", "SLF", "PTH", "ERA", "PL", "TCH",
]
ignore = [
    "E501", "E722", "N802", "N806", "N812", "N815", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"], "migrations/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
indent-width = 4
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "migrations.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=src/prism",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src/prism"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"